--- a/src/View/Components/Navbar.css
+++ b/src/View/Components/Navbar.css
@@ -18,7 +18,7 @@
 .logo {
   flex-shrink: 0; /* keeps logo to the far left and prevents squishing */
   display: flex;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .logo img {
