--- a/src/View/Components/Navbar.css
+++ b/src/View/Components/Navbar.css
@@ -5,12 +5,12 @@
   padding: 0.6rem 1.5rem;
   background-color: #fff;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  white-space: nowrap;
+  /* position: sticky; */
+  /* top: 0; */
+  /* z-index: 1000; */
+  /* white-space: nowrap; */
   gap: 1rem;
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
 }
 
 
@@ -18,7 +18,7 @@
 .logo {
   flex-shrink: 0; /* keeps logo to the far left and prevents squishing */
   display: flex;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .logo img {
