--- a/public/assets/css/templatemo-edu-meeting.css
+++ b/public/assets/css/templatemo-edu-meeting.css
@@ -158,7 +158,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #a12c2f;
+  background-color: #1b090a;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
