--- a/src/View/RegistrationForm.css
+++ b/src/View/RegistrationForm.css
@@ -14,12 +14,12 @@
   }
   
   .ant-form-item {
-    margin-bottom: 16px; /* Space between form items */
+    margin-bottom: 16px; 
   }
   
   @media (max-width: 768px) {
     .registration-form-container {
-      padding: 10px; /* Adjust padding on smaller screens */
+      padding: 10px; 
     }
   }
   .training-section {
